Add clean-db command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "engine": "node 0.12.4",
   "scripts": {
     "start":    "node ./bin/server",
-    "load-api": "node ./bin/load-api"
+    "load-api": "node ./bin/load-api",
+    "clean-db": "node ./bin/clean-db"
   },
   "dependencies": {
     "body-parser": "1.12.4",
