--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   ],
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angular": "~1.4.0"
   }
 }
