--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.3.4",
-    "angular": "~1.4.0"
+    "angular": "~1.4.0",
+    "moment": "~2.10.3"
   }
 }
